tests/ui/privacy/private-in-public-non-principal.stderr
warning: private trait `PrivNonPrincipal` in public interface (error E0445)
  --> $DIR/private-in-public-non-principal.rs:13:1
   |
LL | pub fn leak_dyn_nonprincipal() -> Box<dyn PubPrincipal + PrivNonPrincipal> { loop {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #34537 <https://github.com/rust-lang/rust/issues/34537>
   = note: `#[warn(private_in_public)]` on by default

error: trait `PrivNonPrincipal` is more private than the item `leak_dyn_nonprincipal`
   |
note: function `leak_dyn_nonprincipal` is reachable at visibility `pub`
  --> $DIR/private-in-public-non-principal.rs:13:1
   |
LL | pub fn leak_dyn_nonprincipal() -> Box<dyn PubPrincipal + PrivNonPrincipal> { loop {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: but trait `PrivNonPrincipal` is only usable at visibility `pub(crate)`
  --> $DIR/private-in-public-non-principal.rs:11:1
   |
LL | auto trait PrivNonPrincipal {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/private-in-public-non-principal.rs:4:9
   |
LL | #![deny(private_interfaces)]
   |         ^^^^^^^^^^^^^^^^^^

error: missing documentation for an associated function
  --> $DIR/private-in-public-non-principal.rs:20:9
   |
LL |         pub fn check_doc_lint() {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/private-in-public-non-principal.rs:17:8
   |
LL | #[deny(missing_docs)]
   |        ^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

